Full code sync: resolved bean conflict and cloud db config